# llm-autoencoder

./: README.md  args_parser.py  autoencoder.py  data.py  eval_lca_code_completion.py  pyproject.toml  run_autoencoder.py  run_validation.py  run_validation_LCA.py  train.py
configs/: config.yaml  config_code.yaml  config_code_base.yaml
