[tool.poetry]
name = "llm-autoencoder"
version = "0.1.0"
description = "NL autoencoder"
authors = ["galtimur <gal_timur@yahoo.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
transformers = "^4.41.2"
torch = "^2.3.1"
accelerate = "^0.30.1"
peft = "^0.11.1"
packaging = "^24.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
